# life-dialog

./: README.md
backend/: .env.example  .gitignore  ALEMBIC_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.cloudflared  Dockerfile.local  Makefile  README.md  alembic.ini  compose.yml  init.sql  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10eb8d5b88fb_initial_schema_creation_from_existing_.py  82e7eda0a875_add_google_oauth_authentication_tables.py  e3f89052208a_google_account_link_to_line_account_.py  ffe29ac54f8c_initial_migration_with_pgvector_support.py
backend/app/: auth_settings.py  elasticsearch_settings.py  env_settings.py  gcp_settings.py  line_bot_settings.py  main.py  register_demo_diary.py  scheduler.py  settings.py
backend/app/alg/: ai_search_main.py  ai_search_support.py  analyze_personality.py  analyze_user.py  format_diary_for_llm.py  hybrid_search.py  llm_diary.py  print_search_result.py  rag.py  scheduler.py  search_bm25_sim.py  search_cosine_sim.py  summarize_diary.py
backend/app/db/: add_diary_summary.py  add_user.py  add_user_analization.py  add_user_firebase.py  config.py  create_table.py  db_insert.py  db_model.py  get_analysis.py  get_diary.py  get_diary_firebase.py  get_message.py  get_today_diary.py  get_today_message.py  get_user.py  make_diary.py  make_diary_collection.py  manage_user_status.py  model.py  session.py  set_diary_summary.py  set_diary_vector.py  set_user_analysis.py  sort_diary_messages.py  upload_media.py  user.py  write_diary.py
backend/app/elastic/: save_new_diary.py  set_new_diary.py  sync_diary.py  wait_for_es.py
backend/app/handlers/: follow_handlers.py  message_handlers.py
backend/app/line_bot/: flex_message.py  quick_reply.py  quick_reply_item.py  start_loading.py  user_status.py
backend/app/models/: __init__.py  analysis.py  auth.py  base.py  diary.py  link_token.py  user.py  vector.py
backend/app/routes/: auth.py  diary.py  line_bot.py  summary.py  user_profile.py
backend/app/schemas/: auth_schema.py  diary_schema.py  user_schema.py
backend/app/scripts/: __init__.py  (+1 more)
backend/migrations/: env.py
frontend/: .env  (+6 more)
(+52 files in other folders)
