[tool.poetry]
name = "jphacks-test"
version = "0.1.0"
description = ""
authors = []

readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "~3.10"
fire = "^0.5.0"
fastapi = "^0.110.2"
mypy = "^1.11.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
uvicorn = "^0.30.6"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pgvector = "^0.3.5"
line-bot-sdk = "^3.13.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.10"
firebase-admin = "^6.5.0"
google-cloud-storage = "^2.18.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
mypy = "^1.11.1"
pytest = "^7.2.0"
google-auth-stubs = "^0.2.0"
google-api-python-client-stubs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
