[project]
name = "life-dialog"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fire>=0.5.0",
    "fastapi>=0.110.2",
    "mypy>=1.11.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "uvicorn>=0.30.6",
    "gunicorn>=23.0.0",
    "alembic>=1.13.3",
    "sqlalchemy>=2.0.36",
    "pgvector>=0.3.5",
    "line-bot-sdk>=3.13.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.5.2",
    "psycopg2-binary>=2.9.10",
    "openai>=1.52.2",
    "tiktoken>=0.9.0",
    "schedule>=1.2.2",
    "elasticsearch>=8.13.0",
    "pytz>=2025.2",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "python-multipart>=0.0.6",
    "isort>=6.0.1",
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.12.0",
    "isort>=5.11.2",
    "mypy>=1.11.1",
    "pytest>=7.2.0",
    "google-auth-stubs>=0.2.0",
    "google-api-python-client-stubs>=1.13.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
